@@ -191,6 +191,11 @@
 	define('GRAPH_ITEM_DRAWTYPE_DOT',		3);
 	define('GRAPH_ITEM_DRAWTYPE_DASHED_LINE',	4);
 
+	define('MAP_LINK_DRAWTYPE_LINE',		0);
+	define('MAP_LINK_DRAWTYPE_BOLD_LINE',		2);
+	define('MAP_LINK_DRAWTYPE_DOT',			3);
+	define('MAP_LINK_DRAWTYPE_DASHED_LINE',		4);
+
 	define('SERVICE_ALGORITHM_NONE',0);
 	define('SERVICE_ALGORITHM_MAX',1);
 	define('SERVICE_ALGORITHM_MIN',2);
